# NovelRT

./: .editorconfig
cmake/: FindMaven.cmake
docs/: _ecs_8h_source.html  annotated.html  (+14 more)
src/: CMakeLists.txt
src/NovelRT/: CMakeLists.txt  NovelRunner.cpp
src/NovelRT.DotNet/: CMakeLists.txt
src/NovelRT.Interop/: CMakeLists.txt
src/NovelRT.Interop/Ecs/: NrtSparseSetMemoryContainer.cpp
src/NovelRT.Interop/Ecs/Input/: NrtInputSystem.cpp
src/NovelRT.Interop/Input/: NrtIInputDevice.cpp
src/NovelRT.Java/: .gitignore  CMakeLists.txt  pom.xml  repositories.properties.md  settings.gradle.kts
src/NovelRT.Java/buildSrc/: build.gradle.kts
src/NovelRT.Java/buildSrc/src/main/kotlin/: com.github.novelrt.java-conventions-application.gradle.kts  com.github.novelrt.java-conventions-common.gradle.kts  com.github.novelrt.java-conventions-jlinked-application.gradle.kts  com.github.novelrt.java-conventions-library.gradle.kts
src/NovelRT.Java/buildSrc/src/main/kotlin/com/github/novelrt/buildtools/: CommonData.kt
src/NovelRT.Java/code-generation/: build.gradle.kts  pom.xml
src/NovelRT.Java/code-generation-annotations/: build.gradle.kts  pom.xml
src/NovelRT.Java/code-generation-annotations/src/main/java/: module-info.java
src/NovelRT.Java/code-generation-annotations/src/main/kotlin/: module-info.java
src/NovelRT.Java/code-generation/src/main/kotlin/: module-info.java
src/NovelRT.Java/code-generation/src/main/kotlin/com/github/novelrt/codegeneration/: CodeGenAnnotationProcessor.kt  CodeGenOptions.kt
src/NovelRT.Java/core/: build.gradle.kts  pom.xml
src/NovelRT.Java/core/src/main/java/: module-info.java
src/NovelRT.Java/core/src/main/java/com/github/novelrt/: NovelRTLoader.java  RenderingService.java  WorldObject.java
src/NovelRT.Java/core/src/main/java/com/github/novelrt/event/: Event.java
src/NovelRT.Java/core/src/main/java/com/github/novelrt/internal/: HandleDeleter.java  HandleObject.java  NovelCleaner.java  OwnedHandleObject.java  UsedNatively.java
src/NovelRT.Java/core/src/main/java/com/github/novelrt/interop/: Native.java  NovelRT.java
src/NovelRT.Java/core/src/main/java/com/github/novelrt/maths/: Vector2.java
src/NovelRT.Java/core/src/main/kotlin/: module-info.java
src/NovelRT.Java/core/src/main/kotlin/com/github/novelrt/: ExperimentalNovelRTApi.kt  NovelRTException.kt  NovelRTLoader.kt  NovelRunner.kt  Transform.kt  TransformData.kt  TransformValues.kt  UnsafeMemoryAccess.kt  WorldObject.kt
src/NovelRT.Java/core/src/main/kotlin/com/github/novelrt/bridge/: BridgeWorldObject.kt  NativeHelpers.kt  UsedNatively.kt
src/NovelRT.Java/core/src/main/kotlin/com/github/novelrt/ecs/: BuiltInSystem.kt  Catalogue.kt  ComponentBuffer.kt  ComponentCache.kt  ComponentDefinition.kt  ComponentView.kt  Configurator.kt  DefaultComponentDefinition.kt  EcsSystem.kt  EntityCache.kt  EntityComponentPair.kt  EntityIdVector.kt  ExperimentalSparseSetIterator.kt  SparseSetMemoryContainer.kt  System.kt  SystemScheduler.kt  TransformComponentStruct.kt  Types.kt  UnsafeComponentView.kt  UsualSparseSetIterator.kt
src/NovelRT.Java/core/src/main/kotlin/com/github/novelrt/event/: Event.kt  InteractionListener.kt  SceneConstructionRequestedEvent.kt  SceneConstructionRequestedListener.kt  TimerTickEvent.kt  TimerTickListener.kt  UpdateListener.kt
src/NovelRT.Java/core/src/main/kotlin/com/github/novelrt/graphics/: BasicFillRect.kt  BasicRect.kt  FontSet.kt  ImageRect.kt  RGBAColour.kt  RGBAConfig.kt  RenderObject.kt  RenderingService.kt  TextRect.kt  Texture.kt
src/NovelRT.Java/core/src/main/kotlin/com/github/novelrt/input/: BasicInteractionRect.kt  InputAction.kt  InputDevice.kt  InteractionService.kt  KeyCode.kt  KeyState.kt  NovelKey.kt  NrtKeyCode.kt
src/NovelRT.Java/core/src/main/kotlin/com/github/novelrt/internal/: NativeHelpers.kt
src/NovelRT.Java/sample-java/: build.gradle.kts  pom.xml
src/NovelRT.Java/sample-java/src/main/java/: module-info.java
src/NovelRT.Java/sample-kotlin/: build.gradle.kts  pom.xml
src/NovelRT.Java/sample-kotlin/src/main/java/: module-info.java
src/NovelRT.Java/sample-kotlin/src/main/kotlin/: module-info.java
src/NovelRT.Java/src/main/java/: module-info.java
src/NovelRT.Java/src/main/java/com/github/novelrt/: NovelRunner.java  WorldObject.java
src/NovelRT.Java/src/main/java/com/github/novelrt/bind/: HandleObject.java  NativeRead.java  NovelCleaner.java
src/NovelRT.Java/src/main/java/com/github/novelrt/event/: Event.java  SceneConstructionRequestedEvent.java  SceneConstructionRequestedListener.java
src/NovelRT.Java/src/main/java/com/github/novelrt/graphics/: RenderObject.java
src/NovelRT.Java/src/main/java/com/github/novelrt/internal/: HandleContainer.java  HandleObject.java  UnownedHandleObject.java
src/NovelRT.Java/src/main/java/com/github/novelrt/maths/: RGBAColour.java  Transform.java  Vector2.java
src/NovelRT.JavaBootstrapper/: ArgumentParser.cpp  CMakeLists.txt  StringConversions.cpp  main.cpp
src/NovelRT.JavaBootstrapper/windows/: RunBootstrapper.cmd  RunBootstrapper.ps1
src/NovelRT.JavaStubs/: CMakeLists.txt  main.cpp
src/NovelRT.JavaSupport/: CMakeLists.txt  main.cpp
src/NovelRT/Audio/: AudioService.cpp
src/NovelRT/Graphics/: RGBAConfig.cpp  RenderingService.cpp
src/NovelRT/Java/: BridgeRenderObjectBindings.cpp  BridgeRenderingServiceBindings.cpp  BridgeTextBindings.cpp  Classes.cpp  Constructors.cpp  Context.cpp  Events.cpp  Fields.cpp  Handles.cpp  Init.cpp  JNInit.cpp  Methods.cpp  NovelRunnerBindings.cpp  RenderObjectBindings.cpp  SceneConstructionRequestedEventBindings.cpp  StringConversions.cpp  TransformBindings.cpp  TransformSerialization.cpp  Vector2Serialization.cpp  WorldObjectBindings.cpp
src/NovelRT/Java/Bindings/: AllBindings.cpp  GraphicsServiceBindings.cpp  ImageRectBindings.cpp  NovelRunnerBindings.cpp  RenderObjectBindings.cpp  RenderingServiceBindings.cpp  SceneConstructionRequestedEventBindings.cpp  TextBindings.cpp  TransformBindings.cpp  WorldObjectBindings.cpp
src/NovelRT/Java/TypeConversion/: RGBAConfigTypeConverter.cpp  TransformTypeConverter.cpp  Vector2TypeConverter.cpp
(+241 files in other folders)
